--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="row">
           <div><label>Segurança</label><input id="seguranca" placeholder="EST SD PM Jonny"></div>
-          <div><label>Auxiliar(es)</label><input id="auxiliares" placeholder="Separe por vírgula"></div>
+          <div><label>Auxiliar</label><input id="auxiliares" placeholder="EST SD PM João"></div>
         </div>
       </div>
 
@@ -124,7 +124,6 @@
         <label>Ocorrências</label>
         <div id="list-ocorrencias" class="list"></div>
         <div class="pill" onclick="addOcorrencia()">+ adicionar ocorrência</div>
-        <div class="muted">Dica: use “ÀS hh:mm: descrição…”.</div>
       </div>
 
       <div class="panel">
