--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
     --bg:#0f172a; --panel:#111827; --muted:#9ca3af; --text:#e5e7eb; --line:#2a3647;
     --brand:#4f9cf9; --btn:#2563eb; --btnH:#1e40af; --field:#0b1220;
   }
-
   body{margin:0;background:var(--bg);color:var(--text);font-family:Inter,system-ui,Segoe UI,Roboto,Arial,sans-serif}
   .wrap{max-width:980px;margin:24px auto;padding:0 16px}
   h1{margin:0 0 16px;text-align:center;color:var(--brand);font-weight:800;letter-spacing:.3px}
@@ -17,56 +16,24 @@
   .row{display:flex;flex-wrap:wrap;gap:12px}
   .row>div{flex:1 1 260px;min-width:220px}
   label{display:block;font-weight:700;font-size:.92rem;margin:6px 0}
-  input,textarea{
-    width:100%;box-sizing:border-box;background:var(--field);border:1px solid var(--line);color:var(--text);
-    padding:10px 12px;border-radius:10px;display:block
-  }
+  input,textarea{width:100%;box-sizing:border-box;background:var(--field);border:1px solid var(--line);color:var(--text);padding:10px 12px;border-radius:10px;display:block}
   textarea{min-height:72px;resize:vertical}
   .list{display:grid;gap:10px}
-
-  /* === AJUSTE DOS BOTÕES REMOVER E ADICIONAR === */
-  .item,.item-2{
-    display:flex;
-    align-items:center;
-    gap:8px;
-    flex-wrap:wrap;
-  }
+  .item,.item-2{display:flex;align-items:center;gap:8px;flex-wrap:wrap}
   .item-2 input[type="time"]{width:100px}
-  .item button,.item-2 button{
-    flex-shrink:0;
-    padding:8px 12px;
-    height:auto;
-    align-self:center;
-  }
-  .pill{
-    border:1px dashed var(--line);
-    border-radius:10px;
-    padding:8px 12px;
-    text-align:center;
-    cursor:pointer;
-    color:#bcd3ff;
-    background:#0c1422;
-    font-weight:700;
-  }
+  .item button,.item-2 button{flex-shrink:0;padding:8px 12px;height:auto;align-self:center}
+  .pill{border:1px dashed var(--line);border-radius:10px;padding:8px 12px;text-align:center;cursor:pointer;color:#bcd3ff;background:#0c1422;font-weight:700}
   .pill:hover{background:#0e1829}
-
   .muted{color:var(--muted);font-size:.85rem}
   .btn{background:var(--btn);color:#fff;border:none;border-radius:10px;padding:12px 16px;font-weight:800;cursor:pointer}
-  .btn:hover{background:var(--btnH)}
-
+  .btn:hover{background:#1e40af}
+  .btn-sec{background:#0c1422;border:1px solid var(--line);color:#cfe0ff}
   @media (max-width:720px){ .row>div{flex:1 1 100%;min-width:unset} }
 
+  /* Impressão A4 */
   @page{size:A4;margin:14mm}
-  @media print{
-    body{background:#fff;color:#000;-webkit-print-color-adjust:exact;print-color-adjust:exact}
-    #form-area{display:none!important}
-    #sheet{display:block!important}
-  }
-
-  #sheet{
-    display:none;background:#fff;color:#0b0b0b;border:1px solid #bfc8d6;border-radius:6px;
-    box-sizing:border-box;padding:14mm;width:100%;font-family:ui-sans-serif,system-ui,Segoe UI,Roboto,Arial,sans-serif
-  }
+  @media print{body{background:#fff;color:#000;-webkit-print-color-adjust:exact;print-color-adjust:exact}#form-area{display:none!important}#sheet{display:block!important}}
+  #sheet{display:none;background:#fff;color:#0b0b0b;border:1px solid #bfc8d6;border-radius:6px;box-sizing:border-box;padding:14mm;width:100%;font-family:ui-sans-serif,system-ui,Segoe UI,Roboto,Arial,sans-serif}
   .doc-header{text-align:center;margin-bottom:10px}
   .doc-title{font-weight:900;font-size:22px;color:#0d2a5c;margin:0 0 4px}
   .doc-sub{font-size:12px;color:#3b4a63;margin:0}
@@ -80,31 +47,36 @@
   ul.clean{margin:0;padding-left:16px;font-size:13px}
   .footer-rule{height:1px;background:#ccd6e4;margin:12px 0 8px}
   .doc-footer{display:flex;justify-content:space-between;font-size:11px;color:#506079}
+  /* Tabela de totais */
+  table.tot{width:100%;border-collapse:separate;border-spacing:0 6px}
+  table.tot th,table.tot td{padding:10px 12px;border:1px solid var(--line)}
+  table.tot th{background:#0c1422;text-align:left}
 </style>
+<!-- Supabase JS v2 (CDN) -->
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <div class="wrap">
     <h1>Relatório de Serviço Operacional</h1>
 
+    <!-- ===== FORM ===== -->
     <div id="form-area">
       <div class="panel">
         <div class="row">
           <div><label>Nº do RSO</label><input id="numero" placeholder="0169"></div>
           <div><label>Data/Hora</label><input id="datahora" type="datetime-local"></div>
         </div>
-        <div class="row">
-          <div><label>Rota</label><input id="rota" placeholder="91136"></div>
-        </div>
+        <div class="row"><div><label>Rota</label><input id="rota" placeholder="91136"></div></div>
       </div>
 
       <div class="panel">
         <div class="row">
-          <div><label>Motorista</label><input id="motorista" placeholder="Cabo PM Ducati"></div>
+          <div><label>Motorista</label><input id="motorista" placeholder="Cabo Ducati"></div>
           <div><label>Encarregado</label><input id="encarregado" placeholder="2º Sgt Rangel"></div>
         </div>
         <div class="row">
           <div><label>Segurança</label><input id="seguranca" placeholder="EST SD PM Jonny"></div>
-          <div><label>Auxiliar</label><input id="auxiliares" placeholder="EST SD PM João"></div>
+          <div><label>Auxiliar(es)</label><input id="auxiliares" placeholder="Separe por vírgula"></div>
         </div>
       </div>
 
@@ -124,6 +96,7 @@
         <label>Ocorrências</label>
         <div id="list-ocorrencias" class="list"></div>
         <div class="pill" onclick="addOcorrencia()">+ adicionar ocorrência</div>
+        <div class="muted">Dica: use “ÀS hh:mm: descrição…”.</div>
       </div>
 
       <div class="panel">
@@ -142,28 +115,33 @@
         </div>
       </div>
 
-      <div class="panel" style="text-align:center">
-        <button class="btn" id="printBtn">Imprimir / PDF</button>
+      <div class="panel" style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
+        <button class="btn" id="saveCloudBtn" type="button">Salvar ilícitos (Supabase)</button>
+        <button class="btn btn-sec" id="totalsBtn" type="button">Totais 7 dias</button>
+        <button class="btn" id="printBtn" type="button">Imprimir / PDF</button>
+      </div>
+
+      <!-- painel de totais -->
+      <div id="totalsPanel" class="panel" style="display:none">
+        <h3 style="margin:0 0 10px">Totais por policial (últimos 7 dias)</h3>
+        <div id="totalsContent"></div>
+        <div style="margin-top:10px;display:flex;gap:8px">
+          <button class="btn btn-sec" id="exportCsvBtn" type="button">Exportar CSV</button>
+          <button class="btn btn-sec" type="button" onclick="document.getElementById('totalsPanel').style.display='none'">Fechar</button>
+        </div>
       </div>
     </div>
 
+    <!-- ===== FOLHA A4 PARA IMPRESSÃO ===== -->
     <div id="sheet">
       <div class="doc-header">
         <h2 class="doc-title">Relatório de Serviço Operacional</h2>
         <p class="doc-sub">Documento gerado automaticamente</p>
       </div>
       <hr class="doc-rule">
-
-      <div class="meta">
-        <span id="meta-numero">Nº: —</span>
-        <span id="meta-data">Data/Hora: —</span>
-      </div>
-
-      <div class="section">
-        <h3>ROTA</h3><div id="rota-out" style="font-size:13px">—</div>
-      </div>
-      <div class="section">
-        <h3>EFETIVO</h3>
+      <div class="meta"><span id="meta-numero">Nº: —</span><span id="meta-data">Data/Hora: —</span></div>
+      <div class="section"><h3>ROTA</h3><div id="rota-out" style="font-size:13px">—</div></div>
+      <div class="section"><h3>EFETIVO</h3>
         <div class="kv">
           <b>Motorista:</b><span id="k-motorista">—</span>
           <b>Encarregado:</b><span id="k-encarregado">—</span>
@@ -175,56 +153,162 @@
       <div class="section"><h3>VEÍCULOS</h3><ul class="clean" id="ul-veiculos"><li>—</li></ul></div>
       <div class="section"><h3>OCORRÊNCIAS</h3><ul class="clean" id="ul-ocorrencias"><li>—</li></ul></div>
       <div class="section"><h3>ABORDADOS</h3><ul class="clean" id="ul-abordados"><li>—</li></ul></div>
-      <div class="section"><h3>RESULTADO</h3><ul class="clean" id="ul-resultado">
-        <li>0x Ocorrência.</li><li>0x Apoio.</li><li>0x Ação.</li></ul></div>
-      <hr class="footer-rule">
-      <div class="doc-footer"><div>RSO Online</div><div id="rodape-data">—</div></div>
+      <div class="section"><h3>RESULTADO</h3><ul class="clean" id="ul-resultado"><li>0x Ocorrência.</li><li>0x Apoio.</li><li>0x Ação.</li></ul></div>
+      <hr class="footer-rule"><div class="doc-footer"><div>RSO Online</div><div id="rodape-data">—</div></div>
     </div>
   </div>
 
 <script>
-  const $ = (id)=>document.getElementById(id);
+  const $ = id => document.getElementById(id);
   const pad2 = n => String(n).padStart(2,'0');
   const esc = s => (s||'').replace(/[&<>"]/g,m=>({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[m]));
 
-  (function(){const d=new Date(),z=n=>String(n).padStart(2,'0');
-  $('datahora').value=`${d.getFullYear()}-${z(d.getMonth()+1)}-${z(d.getDate())}T${z(d.getHours())}:${z(d.getMinutes())}`;})();
+  // ===== Supabase config (PREENCHA AQUI) =====
+  const SUPABASE_URL = 'https://SEU-PROJETO.supabase.co';       // ⬅ troque
+  const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...'; // ⬅ troque
+  const supa = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-  function addIlicito(v=''){mkItem('list-ilicitos',v,'ex.: 02x Bomba caseira');}
+  // data/hora default
+  (function(){
+    const d=new Date(), z=n=>String(n).padStart(2,'0');
+    $('datahora').value = `${d.getFullYear()}-${z(d.getMonth()+1)}-${z(d.getDate())}T${z(d.getHours())}:${z(d.getMinutes())}`;
+  })();
+
+  // campos dinâmicos
+  function addIlicito(v=''){mkItem('list-ilicitos',v,'ex.: 02x Maconha');}
   function addVeiculo(v=''){mkItem('list-veiculos',v,'ex.: BMW R1250 HP - Branca - 57URU265 - Apreendida');}
   function addAbordado(v=''){mkItem('list-abordados',v,'ex.: Renato Cruz – 4910 – BOPM – Cb Ducati 20:14');}
   function addOcorrencia(h='',t=''){const w=document.createElement('div');w.className='item-2';
-  w.innerHTML=`<input type="time" value="${h}"><input placeholder="Descreva a ocorrência" value="${t}"><button class="btn" type="button" style="background:#0c1422;border:1px solid var(--line)">remover</button>`;
-  w.querySelector('button').onclick=()=>w.remove();$('list-ocorrencias').appendChild(w);}
+    w.innerHTML=`<input type="time" value="${h}"><input placeholder="Descreva a ocorrência" value="${t}"><button class="btn btn-sec" type="button">remover</button>`;
+    w.querySelector('button').onclick=()=>w.remove();$('list-ocorrencias').appendChild(w);}
   function mkItem(id,v,ph){const w=document.createElement('div');w.className='item';
-  w.innerHTML=`<input placeholder="${ph}" value="${v}"><button class="btn" type="button" style="background:#0c1422;border:1px solid var(--line)">remover</button>`;
-  w.querySelector('button').onclick=()=>w.remove();$(id).appendChild(w);}
+    w.innerHTML=`<input placeholder="${ph}" value="${v}"><button class="btn btn-sec" type="button">remover</button>`;
+    w.querySelector('button').onclick=()=>w.remove();$(id).appendChild(w);}
   if(!$('list-ilicitos').children.length) addIlicito();
   if(!$('list-veiculos').children.length) addVeiculo();
   if(!$('list-ocorrencias').children.length) addOcorrencia();
   if(!$('list-abordados').children.length) addAbordado();
 
+  // coleta
   function collect(){
     const L=id=>[...$(id).querySelectorAll('input')].map(i=>i.value).filter(Boolean);
     const O=[...$('list-ocorrencias').children].map(d=>{const [h,t]=d.querySelectorAll('input');return{h:h.value,t:t.value}}).filter(o=>o.t);
-    return{numero:$('numero').value,datahora:$('datahora').value,rota:$('rota').value,motorista:$('motorista').value,
-      encarregado:$('encarregado').value,seguranca:$('seguranca').value,auxiliares:$('auxiliares').value,
-      ilicitos:L('list-ilicitos'),veiculos:L('list-veiculos'),ocorrencias:O,abordados:L('list-abordados'),
-      resOc:+($('res-oc').value||0),resAp:+($('res-ap').value||0),resAc:+($('res-ac').value||0)};
+    return{numero:$('numero').value,datahora:$('datahora').value,rota:$('rota').value,motorista:$('motorista').value,encarregado:$('encarregado').value,seguranca:$('seguranca').value,auxiliares:$('auxiliares').value,ilicitos:L('list-ilicitos'),veiculos:L('list-veiculos'),ocorrencias:O,abordados:L('list-abordados'),resOc:+($('res-oc').value||0),resAp:+($('res-ap').value||0),resAc:+($('res-ac').value||0)};
   }
-  function fillSheet(d){const dt=d.datahora?new Date(d.datahora):new Date();
+
+  // PDF preenchido
+  function fillSheet(d){
+    const dt=d.datahora?new Date(d.datahora):new Date();
     const dd=`${pad2(dt.getDate())}/${pad2(dt.getMonth()+1)}/${dt.getFullYear()} ${pad2(dt.getHours())}:${pad2(dt.getMinutes())}`;
-    $('meta-numero').textContent=`Nº: ${d.numero||'—'}`;$('meta-data').textContent=`Data/Hora: ${dd}`;$('rota-out').textContent=d.rota||'—';
-    $('k-motorista').textContent=d.motorista||'—';$('k-encarregado').textContent=d.encarregado||'—';$('k-seguranca').textContent=d.seguranca||'—';$('k-auxiliares').textContent=d.auxiliares||'—';
-    const setList=(id,a)=>{const u=$(id);u.innerHTML='';if(!a||!a.length){u.innerHTML='<li>—</li>';return}a.forEach(v=>{const li=document.createElement('li');li.innerHTML=esc(v);u.appendChild(li);});};
-    setList('ul-ilicitos',d.ilicitos);setList('ul-veiculos',d.veiculos);setList('ul-abordados',d.abordados);
-    const ulO=$('ul-ocorrencias');ulO.innerHTML='';if(!d.ocorrencias.length){ulO.innerHTML='<li>—</li>';}
-    else{d.ocorrencias.sort((a,b)=>(a.h||'').localeCompare(b.h||'')).forEach(o=>{const li=document.createElement('li');li.innerHTML=esc(o.h?`ÀS ${o.h}: ${o.t}`:o.t);ulO.appendChild(li);});}
+    $('meta-numero').textContent=`Nº: ${d.numero||'—'}`; $('meta-data').textContent=`Data/Hora: ${dd}`;
+    $('rota-out').textContent=d.rota||'—'; $('k-motorista').textContent=d.motorista||'—'; $('k-encarregado').textContent=d.encarregado||'—'; $('k-seguranca').textContent=d.seguranca||'—'; $('k-auxiliares').textContent=d.auxiliares||'—';
+    const setList=(id,a)=>{const u=$(id);u.innerHTML=''; if(!a||!a.length){u.innerHTML='<li>—</li>';return} a.forEach(v=>{const li=document.createElement('li'); li.innerHTML=esc(v); u.appendChild(li);});};
+    setList('ul-ilicitos',d.ilicitos); setList('ul-veiculos',d.veiculos); setList('ul-abordados',d.abordados);
+    const ulO=$('ul-ocorrencias'); ulO.innerHTML=''; if(!d.ocorrencias.length){ulO.innerHTML='<li>—</li>';} else { d.ocorrencias.sort((a,b)=>(a.h||'').localeCompare(b.h||'')).forEach(o=>{ const li=document.createElement('li'); li.innerHTML=esc(o.h?`ÀS ${o.h}: ${o.t}`:o.t); ulO.appendChild(li); }); }
     $('ul-resultado').innerHTML=`<li>${d.resOc}x Ocorrência.</li><li>${d.resAp}x Apoio.</li><li>${d.resAc}x Ação.</li>`;
-    const now=new Date();$('rodape-data').textContent=`Emitido em ${pad2(now.getDate())}/${pad2(now.getMonth()+1)}/${now.getFullYear()} ${pad2(now.getHours())}:${pad2(now.getMinutes())}`;
+    const now=new Date(); $('rodape-data').textContent=`Emitido em ${pad2(now.getDate())}/${pad2(now.getMonth()+1)}/${now.getFullYear()} ${pad2(now.getHours())}:${pad2(now.getMinutes())}`;
   }
   $('printBtn').addEventListener('click',()=>{fillSheet(collect());window.print();});
   window.onbeforeprint=()=>fillSheet(collect());
+
+  // ====== PARSER de ilícitos ("02x Maconha", "35 maconhas", "12 fuzis"...) ======
+  function parseIlicitosText(multiline){
+    const parts = multiline.split(/\n|,|;/).map(s=>s.trim()).filter(Boolean);
+    const out=[];
+    for(const p of parts){
+      let m = p.match(/^(\d+)\s*[x×]?\s*(.+)$/i) || p.match(/^(\d+)\s+(.+)$/i);
+      if(m){ out.push({item:m[2].trim().toLowerCase(), qty:parseInt(m[1],10)}); continue; }
+      const m2 = p.match(/(\d+)/);
+      if(m2){ out.push({item:p.replace(m2[0],'').trim().toLowerCase()||'desconhecido', qty:parseInt(m2[1],10)}); }
+      else{ out.push({item:p.toLowerCase(), qty:1}); }
+    }
+    return out;
+  }
+
+  // ====== SALVAR no Supabase (um row por item apreendido) ======
+  async function saveIllicitsToSupabase(){
+    const officer = $('motorista').value.trim() || '—';
+    const rota    = $('rota').value.trim() || null;
+    const lines   = [...$('list-ilicitos').querySelectorAll('input')].map(i=>i.value).filter(Boolean).join('\n');
+    const items   = parseIlicitosText(lines);
+    if(!items.length){ alert('Preencha ao menos 1 ilícito.'); return; }
+
+    const rows = items.map(({item,qty})=>({ officer, rota, item_type:item, quantity:qty }));
+    const btn = $('saveCloudBtn'); const old=btn.textContent; btn.textContent='Salvando…'; btn.disabled=true;
+    const { error } = await supa.from('rso_items').insert(rows);
+    btn.textContent = error ? 'Erro ao salvar' : 'Salvo!';
+    setTimeout(()=>{ btn.textContent=old; btn.disabled=false; }, 1200);
+    if(error){ console.error(error); alert('Falha ao salvar no Supabase. Veja o console.'); }
+  }
+  $('saveCloudBtn').addEventListener('click', saveIllicitsToSupabase);
+
+  // ====== TOTAIS 7 DIAS (consulta e mostra) ======
+  async function showTotals7d(){
+    // Se você criou a VIEW rso_weekly_aggregates, use ela:
+    let data, error;
+    try{
+      const resp = await supa.from('rso_weekly_aggregates').select('*');
+      data = resp.data; error = resp.error;
+    }catch(e){ error = e; }
+    // fallback se a view não existir: traz linhas e agrega no cliente
+    if(error){
+      const cutoff = new Date(Date.now()-7*24*60*60*1000).toISOString();
+      const resp = await supa.from('rso_items').select('officer,item_type,quantity,recorded_at').gte('recorded_at', cutoff);
+      if(resp.error){ alert('Erro ao buscar totais.'); console.error(resp.error); return; }
+      const agg = {};
+      resp.data.forEach(r=>{
+        agg[r.officer] = agg[r.officer] || {};
+        agg[r.officer][r.item_type] = (agg[r.officer][r.item_type]||0) + Number(r.quantity);
+      });
+      renderTotals(agg);
+      return;
+    }
+    // data da view: [{officer, item_type, total}]
+    const agg = {};
+    (data||[]).forEach(r=>{
+      agg[r.officer] = agg[r.officer] || {};
+      agg[r.officer][r.item_type] = Number(r.total);
+    });
+    renderTotals(agg);
+  }
+
+  function renderTotals(agg){
+    const c = $('totalsContent');
+    if(!agg || !Object.keys(agg).length){ c.innerHTML='<div class="muted">Sem dados nos últimos 7 dias.</div>'; $('totalsPanel').style.display='block'; return; }
+    // monta tabela por policial
+    let html = '';
+    Object.keys(agg).sort().forEach(off=>{
+      html += `<h4 style="margin:10px 0 6px">${esc(off)}</h4>`;
+      html += `<table class="tot"><thead><tr><th>Item</th><th>Quantidade</th></tr></thead><tbody>`;
+      const items = agg[off];
+      Object.keys(items).sort().forEach(it=>{
+        html += `<tr><td>${esc(it)}</td><td>${items[it]}</td></tr>`;
+      });
+      html += `</tbody></table>`;
+    });
+    c.innerHTML = html;
+    $('totalsPanel').style.display = 'block';
+
+    // export CSV
+    $('exportCsvBtn').onclick = ()=> exportTotalsCSV(agg);
+  }
+
+  function exportTotalsCSV(agg){
+    const rows = [['policial','item','total']];
+    Object.entries(agg).forEach(([off, items])=>{
+      Object.entries(items).forEach(([item, total])=>{
+        rows.push([off, item, total]);
+      });
+    });
+    const escape = s => /[",;\n]/.test(String(s)) ? `"${String(s).replace(/"/g,'""')}"` : s;
+    const csv = rows.map(r=>r.map(escape).join(';')).join('\n');
+    const blob = new Blob([csv], {type:'text/csv;charset=utf-8'});
+    const url  = URL.createObjectURL(blob);
+    const a = document.createElement('a'); a.href=url; a.download='RSO-totais-7dias.csv'; a.click(); URL.revokeObjectURL(url);
+  }
+
+  // liga botões
+  $('totalsBtn').addEventListener('click', showTotals7d);
 </script>
 </body>
 </html>
