--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         </div>
         <div class="row">
           <div><label>Segurança</label><input id="seguranca" placeholder="EST SD PM Jonny"></div>
-          <div><label>Auxiliar(es)</label><input id="auxiliares" placeholder="Separe por vírgula"></div>
+          <div><label>Auxiliar</label><input id="auxiliares" placeholder="EST SD PM Cleber"></div>
         </div>
       </div>
 
@@ -96,7 +96,6 @@
         <label>Ocorrências</label>
         <div id="list-ocorrencias" class="list"></div>
         <div class="pill" onclick="addOcorrencia()">+ adicionar ocorrência</div>
-        <div class="muted">Dica: use “ÀS hh:mm: descrição…”.</div>
       </div>
 
       <div class="panel">
@@ -116,7 +115,7 @@
       </div>
 
       <div class="panel" style="display:flex;gap:10px;justify-content:center;flex-wrap:wrap">
-        <button class="btn" id="saveCloudBtn" type="button">Salvar ilícitos (Supabase)</button>
+        <button class="btn" id="saveCloudBtn" type="button">Salvar ilícitos </button>
         <button class="btn btn-sec" id="totalsBtn" type="button">Totais 7 dias</button>
         <button class="btn" id="printBtn" type="button">Imprimir / PDF</button>
       </div>
